--- a/src/main/webapp/resources/templates/header.xhtml
+++ b/src/main/webapp/resources/templates/header.xhtml
@@ -27,6 +27,7 @@ that are used by all pages are to be included here
         <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.min.js" type="text/javascript"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
         <!-- Project JS -->
+        <h:outputScript name="js/main.js"/>
         <title>eGaugeWebsite</title>
         <meta name="viewport" content='width=700'/>
     </h:head>
